--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,11 @@
   border-top-right-radius: 0;
 }
 
+.chat-bubble.left {
+  margin-right: auto;
+  border-top-left-radius: 0;
+}
+
 /* final-chat (최종 채팅 메시지) 추가 여백 */
 .final-chat {
   margin-top: 30px;
